force-app/main/default/objects/Lead_Survey_Response__c/Lead_Survey_Response__c.object-meta.xml
<CustomObject>
    <label>Lead Survey Response</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Lead Survey Response</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead_survey_Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>