force-app/main/default/objects/Lead_Survey_Response__c/fields/Graudation_From__c.field-meta.xml
<CustomField>
    <fullName>Graudation_From__c</fullName>
    <label>Graudation From</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>