force-app/main/default/objects/Lead_Survey_Response__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this is for look up relation between lead and survey object</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>survey_completes</relationshipName>
    <type>Lookup</type>
</CustomField>