force-app/main/default/objects/Lead_Survey_Response__c/fields/Where_are_you_from__c.field-meta.xml
<CustomField>
    <fullName>Where_are_you_from__c</fullName>
    <label>Where are you from</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>