force-app/main/default/objects/Lead_Survey_Response__c/fields/where_do_you_work__c.field-meta.xml
<CustomField>
    <fullName>where_do_you_work__c</fullName>
    <label>where do you work</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>